--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -1,163 +1,183 @@
-- '*/*@[a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9]+'
-- AdoptOpenJDK/install-jdk@*
-- JamesIves/github-pages-deploy-action@5dc1d5a192aeb5ab5b7d5a77b7d36aea4a7f5c92
-- TobKed/label-when-approved-action@*
-- actions-cool/issues-helper@*
-- actions-rs/*
-- al-cheb/configure-pagefile-action@*
-- amannn/action-semantic-pull-request@*
-- apache/*
-- burrunan/gradle-cache-action@*
-- bytedeco/javacpp-presets/.github/actions/*
-- chromaui/action@*
-- codecov/codecov-action@*
-- conda-incubator/setup-miniconda@*
-- container-tools/kind-action@*
-- container-tools/microshift-action@*
-- dawidd6/action-download-artifact@*
-- delaguardo/setup-graalvm@*
-- docker://jekyll/jekyll:*
-- docker://pandoc/core:2.9
-- eps1lon/actions-label-merge-conflict@*
-- gaurav-nelson/github-action-markdown-link-check@*
-- golangci/*
-- gr2m/twitter-together@*
-- gradle/wrapper-validation-action@*
-- julia-actions/julia-buildpkg@*
-- julia-actions/julia-docdeploy@*
-- julia-actions/julia-processcoverage@*
-- julia-actions/julia-runtest@*
-- julia-actions/setup-julia@*
-- juliaregistries/tagbot@*
-- leafo/gh-actions-lua@*
-- manusa/actions-setup-minikube@*
-- maxim-lobanov/setup-xcode@*
-- mikepenz/action-junit-report@*
-- msys2/setup-msys2@*
-- mvasigh/dispatch-action@*
-- nick-fields/retry@*
-- peter-evans/create-pull-request@*
-- pmd/pmd-github-action@967a81f8b657c87f7c3e96b62301cb1a48efef29
-- potiuk/cancel-workflow-runs@*
-- r-lib/actions/*
-- reactivecircus/android-emulator-runner@*
-- release-drafter/release-drafter@*
-- ruby/setup-ruby@*
-- scacap/action-surefire-report@*
-- scottbrenner/puppet-lint-action@*
-- securego/gosec@*
-- shivammathur/setup-php@*
-- shogo82148/actions-setup-perl@*
-- shufo/auto-assign-reviewer-by-files@*
-- stCarolas/setup-maven@*
-- vhelm/chart-releaser-action@*
-- wei/curl@*
-- burnett01/rsync-deployments@5.2
-- oracle-actions/setup-java@*
-- dorny/paths-filter@b2feaf19c27470162a626bd6fa8438ae5b263721
-- leafo/gh-actions-luarocks@e65774a6386cb4f24e293dca7fc4ff89165b64c5
-- Madrapps/jacoco-report@fd4800e8a81e21bdf373438e5918b975df041d15
-- peter-evans/create-or-update-comment@c9fcb64660bc90ec1cc535646af190c992007c32
-- graalvm/setup-graalvm@v1
-- hadolint/hadolint-action@v2.1.0
-- hadolint/hadolint-action@v2.1.0
-- dominikh/staticcheck-action@v1.1.0
-- damccorm/tag-ur-it@6fa72bbf1a2ea157b533d7e7abeafdb5855dbea5
-- aws-actions/configure-aws-credentials@v1
-- untitaker/hyperlink@0.1.21
-- check-spelling/check-spelling@*
-- dorny/paths-filter@v2
-- peter-evans/close-issue@v2
-- scala-steward-org/scala-steward-action@v2*
-- scalacenter/sbt-dependency-submission@v2*
-- xpol/setup-lua@*
-- BobAnkh/auto-generate-changelog@v1*
-- azure/setup-helm@v3
-- helm/chart-releaser-action@v1.4.0
-- olafurpg/setup-scala@*
-- ossf/scorecard-action@*
-- uraimo/run-on-arch-action@v2
-- coursier/cache-action@v6*
-- nwtgck/actions-netlify@v1.2
-- coursier/setup-action@*
-- marcospereira/action-surefire-report@*
-- jidicula/clang-format-action@v4*
-- coursier/cache-action@v5*
-- Ana06/get-changed-files@*
-- ludeeus/action-shellcheck@1.1.0
-- awalsh128/cache-apt-pkgs-action@*
-- carlosperate/arm-none-eabi-gcc-action@*
-- timonvs/pr-labeler-action@*
-- test-summary/action@*
-- PyO3/maturin-action@*
-- dorny/test-reporter@v1
-- subosito/flutter-action@*
-- nanasess/setup-chromedriver@*
-- pypa/cibuildwheel@v2.12.0
-- vishalsinha21/dynamic-checklist@*
-- amondnet/vercel-action@v25.1.1
-- bufbuild/buf-setup-action@v1*
-- bufbuild/buf-breaking-action@v1*
-- pypa/gh-action-pypi-publish@release/v1*
-- codelytv/pr-size-labeler@v1*
-- crazy-max/ghaction-import-gpg@111c56156bcc6918c056dbef52164cfa583dc549
-- 1Password/load-secrets-action@*
-- tj-actions/glob@*
-- tj-actions/json2file@*
-- korandoru/setup-zig@v1
-- mozilla-actions/sccache-action@v0.0.3
-- seanmiddleditch/gha-setup-ninja@v3
-- ilammy/setup-nasm@v1
-- swift-actions/setup-swift@*
-- codelytv/pr-size-labeler@54ef367
-- hadolint/hadolint-action@*
-- neofinancial/ticket-check-action@v2.0.0
-- ocaml/setup-ocaml@v2*
-- snok/install-poetry@v1
-- dtolnay/rust-toolchain@nightly
-- jlumbroso/free-disk-space@v1*
-- EnricoMi/publish-unit-test-result-action@*
-- jwgmeligmeyling/checkstyle-github-action@*
-- jwgmeligmeyling/spotbugs-github-action@*
-- korandoru/hawkeye@*
-- golang/govulncheck-action@*
-- pyTooling/Actions@*
-- pytooling/actions/with-post-step@*
-- kiegroup/github-action-build-chain@v3*
-- pnpm/action-setup@v2*
-- dawidd6/action-send-mail@v3
-- browser-actions/setup-firefox@v1
-- browser-actions/setup-geckodriver@latest
-- ilammy/msvc-dev-cmd@v1*
-- cicirello/javadoc-cleanup@v1*
-- readthedocs/actions/preview@*
-- erisu/apache-rat-action@*
-- bufbuild/buf-lint-action@v1*
-- erisu/license-checker-action@*
-- peaceiris/actions-mdbook@v1
-- betahuhn/repo-file-sync-action@v1
-- swatinem/rust-cache@v2
-- jrouly/scalafmt-native-action@*
-- dorny/paths-filter@v3.0.0
-- dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd
-- pnpm/action-setup@v3*
-- arduino/setup-protoc@v*
-- mozilla-actions/sccache-action@v0.0.4
-- seanmiddleditch/gha-setup-ninja@v4
-- ncipollo/release-action@1e3e9c6637e5566e185b7ab66f187539c5a76da7
-- actions-cool/maintain-one-comment@*
-- dorny/paths-filter@v3
-- tj-actions/changed-files@v43.0.0
-- pdm-project/setup-pdm@v4
-- geekyeggo/delete-artifact@v5
-- actions/setup-go@v5
-- hashicorp/setup-terraform@v3
-- opentofu/setup-opentofu@v1
-- helm/chart-testing-action@v2.6.1
-- helm/kind-action@v1.10.0
-- JustinBeckwith/linkinator-action@v1.10.4
-- pnpm/action-setup@v4*
-- phoenix-actions/test-reporting@v15
-- crate-ci/typos@*
-- jlumbroso/free-disk-space@54081f138730dfa15788a46383842cd2f914a1be
-- easimon/maximize-build-space@*
+- */*@[a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9]+,
+- 1Password/load-secrets-action@*,
+- AdoptOpenJDK/install-jdk@*,
+- Ana06/get-changed-files@*,
+- BobAnkh/auto-generate-changelog@v1*,
+- DavidAnson/markdownlint-cli2-action@v16,
+- EnricoMi/publish-unit-test-result-action@*,
+- JamesIves/github-pages-deploy-action@v4.6.8,
+- JustinBeckwith/linkinator-action@v1.10.4,
+- JustinBeckwith/linkinator-action@v1.11.0,
+- Madrapps/jacoco-report@fd4800e8a81e21bdf373438e5918b975df041d15,
+- PyO3/maturin-action@*,
+- TobKed/label-when-approved-action@*,
+- actions-cool/check-user-permission@*,
+- actions-cool/issues-helper@*,
+- actions-cool/maintain-one-comment@*,
+- actions-rs/*,
+- actions/setup-go@v5,
+- adolint/hadolint-action@v2.1.0*,
+- al-cheb/configure-pagefile-action@*,
+- amannn/action-semantic-pull-request@*,
+- amondnet/vercel-action@v25.1.1,
+- apache/*,
+- arduino/setup-protoc@v*,
+- awalsh128/cache-apt-pkgs-action@*,
+- aws-actions/configure-aws-credentials@v1,
+- azure/setup-helm@v3,
+- betahuhn/repo-file-sync-action@v1,
+- browser-actions/setup-firefox@v1,
+- browser-actions/setup-geckodriver@latest,
+- bufbuild/buf-breaking-action@v1*,
+- bufbuild/buf-lint-action@v1*,
+- bufbuild/buf-setup-action@v1*,
+- burnett01/rsync-deployments@5.2,
+- burrunan/gradle-cache-action@*,
+- bytedeco/javacpp-presets/.github/actions/*,
+- carloscastrojumo/github-cherry-pick-action@v1.0.9,
+- carlosperate/arm-none-eabi-gcc-action@*,
+- check-spelling/check-spelling@*,
+- chromaui/action@*,
+- cicirello/javadoc-cleanup@v1*,
+- codecov/codecov-action@*,
+- codelytv/pr-size-labeler@54ef367,
+- codelytv/pr-size-labeler@v1*,
+- codspeedhq/action@v3*,
+- commit-check/commit-check-action@8d507e12899a9feb405c3ed546252ff9508724e0,
+- conda-incubator/setup-miniconda@*,
+- container-tools/kind-action@*,
+- container-tools/microshift-action@*,
+- coursier/cache-action@v5*,
+- coursier/cache-action@v6*,
+- coursier/setup-action@*,
+- cpp-linter/cpp-linter-action@v2.13.3,
+- crate-ci/typos@*,
+- crazy-max/ghaction-import-gpg@111c56156bcc6918c056dbef52164cfa583dc549,
+- damccorm/tag-ur-it@6fa72bbf1a2ea157b533d7e7abeafdb5855dbea5,
+- dawidd6/action-download-artifact@*,
+- dawidd6/action-send-mail@v3,
+- delaguardo/setup-graalvm@*,
+- dlang-community/setup-dlang@v2*,
+- docker://jekyll/jekyll:*,
+- docker://pandoc/core:2.9,
+- dominikh/staticcheck-action@v1.1.0,
+- dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd,
+- dorny/paths-filter@b2feaf19c27470162a626bd6fa8438ae5b263721,
+- dorny/paths-filter@v2,
+- dorny/paths-filter@v3,
+- dorny/paths-filter@v3.0.0,
+- dorny/test-reporter@v1,
+- dtolnay/rust-toolchain@nightly,
+- easimon/maximize-build-space@*,
+- eps1lon/actions-label-merge-conflict@*,
+- erisu/apache-rat-action@*,
+- erisu/license-checker-action@*,
+- gaurav-nelson/github-action-markdown-link-check@*,
+- geekyeggo/delete-artifact@v5,
+- golang/govulncheck-action@*,
+- golangci/*,
+- gr2m/twitter-together@*,
+- graalvm/setup-graalvm@v1,
+- gradle/wrapper-validation-action@*,
+- hadolint/hadolint-action@*,
+- hadolint/hadolint-action@v2.1.0,
+- hashicorp/setup-terraform@v3,
+- helm/chart-releaser-action@v1.4.0,
+- helm/chart-testing-action@e6669bcd63d7cb57cb4380c33043eebe5d111992,
+- helm/chart-testing-action@v2.6.1,
+- helm/kind-action@0025e74a8c7512023d06dc019c617aa3cf561fde,
+- helm/kind-action@v1.10.0,
+- ilammy/msvc-dev-cmd@v1*,
+- ilammy/setup-nasm@v1,
+- jidicula/clang-format-action@v4*,
+- jlumbroso/free-disk-space@54081f138730dfa15788a46383842cd2f914a1be,
+- jlumbroso/free-disk-space@v1*,
+- jrouly/scalafmt-native-action@*,
+- julia-actions/julia-buildpkg@*,
+- julia-actions/julia-docdeploy@*,
+- julia-actions/julia-processcoverage@*,
+- julia-actions/julia-runtest@*,
+- julia-actions/setup-julia@*,
+- juliaregistries/tagbot@*,
+- jwgmeligmeyling/checkstyle-github-action@*,
+- jwgmeligmeyling/spotbugs-github-action@*,
+- kiegroup/github-action-build-chain@v3*,
+- korandoru/hawkeye@*,
+- korandoru/setup-zig@v1,
+- leafo/gh-actions-lua@*,
+- leafo/gh-actions-luarocks@e65774a6386cb4f24e293dca7fc4ff89165b64c5,
+- ludeeus/action-shellcheck@1.1.0,
+- manusa/actions-setup-minikube@*,
+- marcospereira/action-surefire-report@*,
+- maxim-lobanov/setup-xcode@*,
+- medyagh/setup-minikube@v0.*,
+- mikepenz/action-junit-report@*,
+- mozilla-actions/sccache-action@v0.0.3,
+- mozilla-actions/sccache-action@v0.0.4,
+- msys2/setup-msys2@*,
+- mvasigh/dispatch-action@*,
+- nanasess/setup-chromedriver@*,
+- ncipollo/release-action@1e3e9c6637e5566e185b7ab66f187539c5a76da7,
+- neofinancial/ticket-check-action@v2.0.0,
+- nick-fields/retry@*,
+- nwtgck/actions-netlify@v1.2,
+- ocaml/setup-ocaml@v2*,
+- olafurpg/setup-scala@*,
+- opentofu/setup-opentofu@v1,
+- oracle-actions/setup-java@*,
+- ossf/scorecard-action@*,
+- packetcoders/action-setup-cache-python-poetry@v1.1.0,
+- pdm-project/setup-pdm@v4,
+- peaceiris/actions-gh-pages@*,
+- peaceiris/actions-hugo@*,
+- peaceiris/actions-mdbook@*,
+- peter-evans/close-issue@v2,
+- peter-evans/create-or-update-comment@c9fcb64660bc90ec1cc535646af190c992007c32,
+- peter-evans/create-pull-request@*,
+- phoenix-actions/test-reporting@v15,
+- pmd/pmd-github-action@967a81f8b657c87f7c3e96b62301cb1a48efef29,
+- pnpm/action-setup@v2*,
+- pnpm/action-setup@v3*,
+- pnpm/action-setup@v4*,
+- potiuk/cancel-workflow-runs@*,
+- pre-commit/action@v3.0.1,
+- pyTooling/Actions@*,
+- pypa/cibuildwheel@v2.12.0,
+- pypa/gh-action-pypi-publish@release/v1*,
+- pytooling/actions/with-post-step@*,
+- quarto-dev/quarto-actions/*,
+- r-lib/actions/*,
+- reactivecircus/android-emulator-runner@*,
+- readthedocs/actions/preview@*,
+- release-drafter/release-drafter@*,
+- ruby/setup-ruby@*,
+- rustsec/*,
+- sbt/setup-sbt@v1*,
+- scacap/action-surefire-report@*,
+- scala-steward-org/scala-steward-action@v2*,
+- scalacenter/sbt-dependency-submission@v2*,
+- scottbrenner/puppet-lint-action@*,
+- seanmiddleditch/gha-setup-ninja@v3,
+- seanmiddleditch/gha-setup-ninja@v4,
+- securego/gosec@*,
+- shivammathur/setup-php@*,
+- shogo82148/actions-setup-perl@*,
+- shufo/auto-assign-reviewer-by-files@*,
+- snok/install-poetry@v1,
+- softprops/action-gh-release@v2*,
+- stCarolas/setup-maven@*,
+- subosito/flutter-action@*,
+- swatinem/rust-cache@v2,
+- swift-actions/setup-swift@*,
+- taiki-e/install-action@v2*,
+- test-summary/action@*,
+- timonvs/pr-labeler-action@*,
+- tj-actions/changed-files@v43.0.0,
+- tj-actions/glob@*,
+- tj-actions/json2file@*,
+- untitaker/hyperlink@0.1.21,
+- uraimo/run-on-arch-action@v2,
+- vhelm/chart-releaser-action@*,
+- vishalsinha21/dynamic-checklist@*,
+- wei/curl@*,
+- xpol/setup-lua@*,
