--- a/stash/save/action.yml
+++ b/stash/save/action.yml
@@ -102,7 +102,7 @@ outputs:
 runs:
   using: 'composite'
   steps:
-    - name: Check Check for dependencies
+    - name: Check for dependencies
       shell: bash
       run: |
         type -P python3 > /dev/null 2>&1 || { echo "::error ::python3 is required for this action"; exit 1; }
