Add restrictive permission

--- a/.github/workflows/build-artifacts.yml
+++ b/.github/workflows/build-artifacts.yml
@@ -18,6 +18,9 @@ on:
       - 'pelican/build-cmark.sh'
   workflow_dispatch:
 
+permissions:
+  content: read
+
 jobs:
   build-artifact:
     runs-on: ubuntu-latest
