--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -61,42 +61,53 @@ runs:
         [ -d "${{ github.workspace }}/${{ inputs.assets }}" ] && cp -r "${{ github.workspace }}/${{ inputs.assets }}" "${{ inputs.tempdir }}" || echo "No ${{ inputs.assets }} found!"
       working-directory: "${{ inputs.srcdir }}"
     
-    - name: Check out previous branch
-      if: ${{ inputs.publish == 'true' }}
-      shell: bash
-      run: | 
-        git config --global user.email "dfoulks@apache.org"
-        git config --global user.name "AsciiDcotor (action)"
-        git remote update
-        if git checkout "${{ inputs.dest_branch }}"
-        then
-          git pull origin "${{ inputs.dest_branch }}"
-        else
-          # if none, create it.
-          echo "branch ${{ inputs.dest_branch }} is new; create empty site"
-          git switch --orphan "${{ inputs.dest_branch }}"
-          git checkout "origin/${{ github.ref_name }}" -- .asf.yaml
-          git add .asf.yaml -f
-          git commit -m "Initialise empty site"
-          git push -u origin "${{ inputs.dest_branch }}"
-        fi
-      working-directory: "${{ inputs.srcdir }}"
+#    - name: Check out previous branch
+#      if: ${{ inputs.publish == 'true' }}
+#      shell: bash
+#      run: | 
+#        git config --global user.email "dfoulks@apache.org"
+#        git config --global user.name "AsciiDcotor (action)"
+#        git remote update
+#        if git checkout "${{ inputs.dest_branch }}"
+#        then
+#          git pull origin "${{ inputs.dest_branch }}"
+#        else
+#          # if none, create it.
+#          echo "branch ${{ inputs.dest_branch }} is new; create empty site"
+#          git switch --orphan "${{ inputs.dest_branch }}"
+#          git checkout "origin/${{ github.ref_name }}" -- .asf.yaml
+#          git add .asf.yaml -f
+#          git commit -m "Initialise empty site"
+#          git push -u origin "${{ inputs.dest_branch }}"
+#        fi
+#      working-directory: "${{ inputs.srcdir }}"
 
-    - name: Commit Directly to the branch
-      if: ${{ inputs.publish == 'true' }}
-      shell: bash
-      run: |
-        # Remove all existing output so deletions will be captured
-        rm -rf "${{ inputs.output }}"
-        git rm --quiet -r --ignore-unmatch --cached "${{ inputs.output }}"/*
-        mv "${{ inputs.srcdir }}/${{ inputs.tempdir }}" "${{ inputs.output }}"
-        git diff # Show changes
-        git add "${{ inputs.output }}"
-        git status
-        if git commit -m "Commit build products"
-          then
-              git push
-        else
-          echo "No change"
-          true # ensure step is successful
-        fi
+#    - name: Commit Directly to the branch
+#      if: ${{ inputs.publish == 'true' }}
+#      shell: bash
+#      run: |
+#        # Remove all existing output so deletions will be captured
+#        rm -rf "${{ inputs.output }}"
+#        git rm --quiet -r --ignore-unmatch --cached "${{ inputs.output }}"/*
+#        mv "${{ inputs.srcdir }}/${{ inputs.tempdir }}" "${{ inputs.output }}"
+#        git diff # Show changes
+#        git add "${{ inputs.output }}"
+#        git status
+#        if git commit -m "Commit build products"
+#          then
+#              git push
+#        else
+#          echo "No change"
+#          true # ensure step is successful
+#        fi
+#
+    - run: cd "${{ inputs.output }}" && npm install
+    - name: Setup Pages
+      uses: actions/configure-pages@v5
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+        with:
+          path: '${{ inputs.output }}'
+    - name: Deploy to GitHub Pages[
+      id: deployment
+      uses: actions/deploy-pages@v4
