Added Working Directory to the npm install in lieu of a relative

--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -101,8 +101,9 @@ runs:
 #          true # ensure step is successful
 #        fi
 #
-    - run: cd "${{ inputs.output }}" && npm install
+    - run: npm install
       shell: bash
+      working-directory: "${{ inputs.output }}"
     - name: Setup Pages
       uses: actions/configure-pages@v5
     - name: Upload artifact
