Attempting to set the working dir as srcdir/output instead of moving the output dir around

--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -103,13 +103,13 @@ runs:
 #
     - run: npm install
       shell: bash
-      working-directory: "${{ inputs.output }}"
+      working-directory: "${{ inputs.srcdir }}/${{ inputs.output }}"
     - name: Setup Pages
       uses: actions/configure-pages@v5
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: '${{ inputs.output }}'
+        path: '${{ inputs.srcdir }}/${{ inputs.output }}'
     - name: Deploy to GitHub Pages[
       id: deployment
       uses: actions/deploy-pages@v4
