--- a/asciidoc/action.yml
+++ b/asciidoc/action.yml
@@ -1,4 +1,8 @@
 name: Build Presentations with AsciiDoc
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 description: "Generate a Slidedeck from AsciiDoc Markdown"    
 inputs:
   srcdir:
