Added new approved_patterns list and updated actions.yml, sans tj-actions

--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -1,6 +1,6 @@
-- '*/*@[a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9]+'
+---
+- "*/*@[a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9][a-f0-9]+"
 - AdoptOpenJDK/install-jdk@*
-- JamesIves/github-pages-deploy-action@5dc1d5a192aeb5ab5b7d5a77b7d36aea4a7f5c92
 - TobKed/label-when-approved-action@*
 - actions-cool/issues-helper@*
 - actions-rs/*
@@ -11,7 +11,6 @@
 - bytedeco/javacpp-presets/.github/actions/*
 - chromaui/action@*
 - codecov/codecov-action@*
-- conda-incubator/setup-miniconda@*
 - container-tools/kind-action@*
 - container-tools/microshift-action@*
 - dawidd6/action-download-artifact@*
@@ -36,6 +35,8 @@
 - msys2/setup-msys2@*
 - mvasigh/dispatch-action@*
 - nick-fields/retry@*
+- peaceiris/actions-gh-pages@*
+- peaceiris/actions-hugo@*
 - peter-evans/create-pull-request@*
 - pmd/pmd-github-action@967a81f8b657c87f7c3e96b62301cb1a48efef29
 - potiuk/cancel-workflow-runs@*
@@ -60,12 +61,10 @@
 - peter-evans/create-or-update-comment@c9fcb64660bc90ec1cc535646af190c992007c32
 - graalvm/setup-graalvm@v1
 - hadolint/hadolint-action@v2.1.0
-- hadolint/hadolint-action@v2.1.0
 - dominikh/staticcheck-action@v1.1.0
 - damccorm/tag-ur-it@6fa72bbf1a2ea157b533d7e7abeafdb5855dbea5
 - aws-actions/configure-aws-credentials@v1
 - untitaker/hyperlink@0.1.21
-- check-spelling/check-spelling@*
 - dorny/paths-filter@v2
 - peter-evans/close-issue@v2
 - scala-steward-org/scala-steward-action@v2*
@@ -102,8 +101,6 @@
 - codelytv/pr-size-labeler@v1*
 - crazy-max/ghaction-import-gpg@111c56156bcc6918c056dbef52164cfa583dc549
 - 1Password/load-secrets-action@*
-- tj-actions/glob@*
-- tj-actions/json2file@*
 - korandoru/setup-zig@v1
 - mozilla-actions/sccache-action@v0.0.3
 - seanmiddleditch/gha-setup-ninja@v3
@@ -121,7 +118,6 @@
 - jwgmeligmeyling/spotbugs-github-action@*
 - korandoru/hawkeye@*
 - golang/govulncheck-action@*
-- pyTooling/Actions@*
 - pytooling/actions/with-post-step@*
 - kiegroup/github-action-build-chain@v3*
 - pnpm/action-setup@v2*
@@ -134,9 +130,7 @@
 - erisu/apache-rat-action@*
 - bufbuild/buf-lint-action@v1*
 - erisu/license-checker-action@*
-- peaceiris/actions-mdbook@v1
 - betahuhn/repo-file-sync-action@v1
-- swatinem/rust-cache@v2
 - jrouly/scalafmt-native-action@*
 - dorny/paths-filter@v3.0.0
 - dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd
@@ -147,21 +141,63 @@
 - ncipollo/release-action@1e3e9c6637e5566e185b7ab66f187539c5a76da7
 - actions-cool/maintain-one-comment@*
 - dorny/paths-filter@v3
-- tj-actions/changed-files@v43.0.0
 - pdm-project/setup-pdm@v4
-- geekyeggo/delete-artifact@v5
 - actions/setup-go@v5
 - hashicorp/setup-terraform@v3
 - opentofu/setup-opentofu@v1
 - helm/chart-testing-action@v2.6.1
-- helm/kind-action@v1.10.0
 - JustinBeckwith/linkinator-action@v1.10.4
 - pnpm/action-setup@v4*
 - phoenix-actions/test-reporting@v15
 - crate-ci/typos@*
 - jlumbroso/free-disk-space@54081f138730dfa15788a46383842cd2f914a1be
 - easimon/maximize-build-space@*
+- carloscastrojumo/github-cherry-pick-action@v1.0.9
+- check-spelling/check-spelling@*
+- peaceiris/actions-mdbook@*
+- packetcoders/action-setup-cache-python-poetry@v1.1.0
+- medyagh/setup-minikube@v0.*
+- quarto-dev/quarto-actions/*
+- DavidAnson/markdownlint-cli2-action@v16
+- actions-cool/check-user-permission@*
+- sbt/setup-sbt@v1*
+- dlang-community/setup-dlang@v2*
+- softprops/action-gh-release@v2*
+- adolint/hadolint-action@v2.1.0*
+- helm/chart-testing-action@e6669bcd63d7cb57cb4380c33043eebe5d111992
+- helm/kind-action@0025e74a8c7512023d06dc019c617aa3cf561fde
+- helm/kind-action@v1.10.0
+- codspeedhq/action@v3*
+- conda-incubator/setup-miniconda@*
+- JamesIves/github-pages-deploy-action@v4.6.8
+- JustinBeckwith/linkinator-action@v1.11.0
+- commit-check/commit-check-action@8d507e12899a9feb405c3ed546252ff9508724e0
+- cpp-linter/cpp-linter-action@v2.13.3
+- pyTooling/Actions@*
+- pre-commit/action@v3.0.1
+- rustsec/*
+- taiki-e/install-action@v2*
+- pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2
+- dtolnay/rust-toolchain@stable
+- snok/install-poetry@76e04a911780d5b312d89783f7b1cd627778900a
 - VirtusLab/scala-cli-setup@ef3764b372549ee60cce795f98da0df46e2567ff
 - VirtusLab/scala-cli-setup@2203916b75d15293db29f4bcbd7ff082a27fe6ef
-- VirtusLab/scala-cli-setup@cafdb148305f582fe7017dbe02bbec29ce217b74
-- snok/install-poetry@76e04a911780d5b312d89783f7b1cd627778900a
+- Kesin11/actions-timeline@427ee2cf860166e404d0d69b4f2b24012bb7af4f
+- clechasseur/rs-cargo@v3*
+- houseabsolute/actions-rust-cross@v0*
+- houseabsolute/actions-rust-cross@v1*
+- jarvusinnovations/background-action@v1*
+- taiki-e/install-action@cargo-llvm-cov
+- gsactions/commit-message-checker@v2*
+- bnjbvr/cargo-machete@v0.7.0
+- clechasseur/rs-cargo@v2*
+- crazy-max/ghaction-setup-docker@v4
+- mukunku/tag-exists-action@v1.6.0
+- orhun/git-cliff-action@v4
+- jasonetco/create-an-issue@v2
+- addnab/docker-run-action@v3
+- vimtor/action-zip@v1
+- swatinem/rust-cache@v2*
+- geekyeggo/delete-artifact@v5*
+- geekyeggo/delete-artifact@f275313e70c08f6120db482d7a6b98377786765b
+
