Add new dorny/paths-filter to allow using `predicate-quantifier`
Signed-off-by: kezhenxu94 <kezhenxu94@apache.org>

--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -200,4 +200,4 @@
 - swatinem/rust-cache@v2*
 - geekyeggo/delete-artifact@v5*
 - geekyeggo/delete-artifact@f275313e70c08f6120db482d7a6b98377786765b
-
+- dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
