move scripts into folder

--- a/.github/workflows/remove_expired.yml
+++ b/.github/workflows/remove_expired.yml
@@ -29,7 +29,7 @@ jobs:
         shell: python
         run: |
           import sys
-          sys.path.append(".")
+          sys.path.append("./gateway/")
 
           import gateway as g
           g.clean_actions("actions.yml")
