--- a/.github/workflows/update_actions.yml
+++ b/.github/workflows/update_actions.yml
@@ -32,7 +32,7 @@ jobs:
         shell: python
         run: |
           import sys
-          sys.path.append(".")
+          sys.path.append("./gateway/")
 
           import gateway as g
           g.update_actions(".github/workflows/dummy.yml", "actions.yml")
