--- a/.github/workflows/update_dummy.yml
+++ b/.github/workflows/update_dummy.yml
@@ -12,7 +12,7 @@ on:
       - "actions.yml"
 
 permissions:
-  contents: write
+  contents: workflows
 
 # We want workflows on main to run in order to avoid losing data through race conditions
 concurrency: "${{ github.ref }}-${{ github.workflow }}"
