added what I think should be the correct permissions form

--- a/.github/workflows/update_dummy.yml
+++ b/.github/workflows/update_dummy.yml
@@ -12,7 +12,8 @@ on:
       - "actions.yml"
 
 permissions:
-  contents: workflows
+  contents: write
+  workflows: write
 
 # We want workflows on main to run in order to avoid losing data through race conditions
 concurrency: "${{ github.ref }}-${{ github.workflow }}"
