--- a/.github/workflows/dummy.yml
+++ b/.github/workflows/dummy.yml
@@ -54,6 +54,7 @@ jobs:
       - uses: dorny/paths-filter@v3.0.0
       - uses: graalvm/setup-graalvm@01ed653ac833fe80569f1ef9f25585ba2811baab
       - uses: graalvm/setup-graalvm@v1
+      - uses: gradle/wrapper-validation-action@v3.5.0
       - uses: hadolint/hadolint-action@f988afea3da57ee48710a9795b6bb677cc901183
       - uses: hadolint/hadolint-action@v2.1.0
       - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd
