--- a/actions.yml
+++ b/actions.yml
@@ -249,9 +249,15 @@ dominikh/staticcheck-action:
     expires_at: 2025-08-01
 dorny/paths-filter:
   0bc4621a3135347011ad047f9ecf449bf72ce2bd:
-    expires_at: 2050-01-01
+    expires_at: 2025-06-24
   v3.0.0:
-    expires_at: 2025-08-01
+    expires_at: 2025-06-24
+  de90cc6fb38fc0963ad72b210f1f284cd68cea36:
+    expires_at: 2025-06-24
+    keep: false
+  v3.0.2:
+    expires_at: 2100-01-01
+    keep: false
 easimon/maximize-build-space:
   '*':
     expires_at: 2025-08-01
