--- a/actions.yml
+++ b/actions.yml
@@ -252,6 +252,10 @@ dorny/paths-filter:
     expires_at: 2025-06-24
   v3.0.0:
     expires_at: 2025-06-24
+  ebc4d7e9ebcb0b1eb21480bb8f43113e996ac77a:
+    expires_at: 2025-06-24
+  v3.0.1: 
+    expires_at: 2025-06-24
   de90cc6fb38fc0963ad72b210f1f284cd68cea36:
     expires_at: 2025-06-24
     keep: false
