feat: add golangci/golangci-lint-action
Signed-off-by: Zixuan Liu <nodeces@gmail.com>

--- a/actions.yml
+++ b/actions.yml
@@ -715,3 +715,10 @@ slackapi/slack-github-action:
     expires_at: 2025-08-01
   v2.0.0:
     expires_at: 2025-08-01
+golangci/golangci-lint-action:
+  1481404843c368bc19ca9406f87d6e0fc97bdcfd:
+    expires_at: 2050-08-01
+    keep: true
+  55c2c1448f86e01eaae002a5a3a9624417608d84:
+    expires_at: 2050-08-01
+    keep: true
