--- a/.github/workflows/update_dummy.yml
+++ b/.github/workflows/update_dummy.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Commit and push changes
         if: ${{ github.event_name != 'pull_request' }}
         run: |
-          git config --local user.name "$GITHUB_ACTOR"
-          git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config --local user.name "asfgit"
+          git config --local user.email "asfgit@users.noreply.github.com"
           git add -f .github/workflows/dummy.yml approved_patterns.yml
           git commit -m "Update Workflow" || echo "No changes"
           git push origin
