--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -218,3 +218,5 @@
 - xpol/setup-lua@*
 - slackapi/slack-github-action@485a9d42d3a73031f12ec201c457e2162c45d02d
 - slackapi/slack-github-action@v2.0.0
+- golangci/golangci-lint-action@1481404843c368bc19ca9406f87d6e0fc97bdcfd
+- golangci/golangci-lint-action@55c2c1448f86e01eaae002a5a3a9624417608d84
