--- a/actions.yml
+++ b/actions.yml
@@ -6,51 +6,55 @@ ana06/get-changed-files:
   v2.3.0:
     expires_at: 2025-08-01
 actions-rs/*:
-  '*'
+  '*': 
     expires_at: 2025-08-01
     keep: true
 apache/*:
-  '*'
+  '*':
     expires_at: 2025-08-01
     keep: true
 bytedeco/javacpp-presets/.github/actions/*:
-  '*'
+  '*':
     expires_at: 2025-08-01
     keep: true
-dtolnay/rust-toolchain@nightly:
+dtolnay/rust-toolchain:
+  'nightly':
     expires_at: 2025-08-01
     keep: true
-dtolnay/rust-toolchain@stable:
+dtolnay/rust-toolchain:
+  'stable':
     expires_at: 2025-08-01
     keep: true
 golangci/*:
+  '*':
     expires_at: 2025-08-01
     keep: true
 pypa/gh-action-pypi-publish:
-  'release/v1*'
+  'release/v1*':
     expires_at: 2025-08-01
     keep: true
-pytooling/actions/with-post-step@*:
+pytooling/actions/with-post-step:
+  '*':
     expires_at: 2025-08-01
     keep: true
 quarto-dev/quarto-actions/*:
-  '*'
+  '*':
     expires_at: 2025-08-01
     keep: true
 r-lib/actions/*:
-  '*'
+  '*':
     expires_at: 2025-08-01
     keep: true
 readthedocs/actions/preview:
-  '*',
+  '*':
     expires_at: 2025-08-01
     keep: true
 rustsec/*:
-  '*'
+  '*':
     expires_at: 2025-08-01
     keep: true
 vhelm/chart-releaser-action:
-  '*'
+  '*':
     expires_at: 2025-08-01
     keep: true
 AdoptOpenJDK/install-jdk:
