gateway(add): google-github-actions/setup-gcloud (#145)
* google-github-actions/setup-gcloud

Signed-off-by: James Fredley <jamesfredley@users.noreply.github.com>

* remove keep

Signed-off-by: Jacob Wujciak-Jens <jacob@wujciak.de>

---------

Signed-off-by: James Fredley <jamesfredley@users.noreply.github.com>
Signed-off-by: Jacob Wujciak-Jens <jacob@wujciak.de>
Co-authored-by: Jacob Wujciak-Jens <jacob@wujciak.de>

--- a/actions.yml
+++ b/actions.yml
@@ -347,6 +347,9 @@ golang/govulncheck-action:
   '*':
     expires_at: 2025-08-01
     keep: true
+google-github-actions/setup-gcloud:
+  77e7a554d41e2ee56fc945c52dfd3f33d12def9a:
+    expires_at: 2050-01-01
 gr2m/twitter-together:
   '*':
     expires_at: 2025-08-01
