--- a/actions.yml
+++ b/actions.yml
@@ -385,9 +385,15 @@ helm/chart-releaser-action:
     expires_at: 2025-08-01
 helm/chart-testing-action:
   e6669bcd63d7cb57cb4380c33043eebe5d111992:
-    expires_at: 2050-01-01
+    expires_at: 2025-07-17
   v2.6.1:
-    expires_at: 2025-08-01
+    expires_at: 2025-07-17
+  0d28d3144d3a25ea2cc349d6e59901c4ff469b3b:
+    expires_at: 2025-07-17
+    keep: false
+  v2.7.0:
+    expires_at: 2100-01-01
+    keep: false
 helm/kind-action:
   0025e74a8c7512023d06dc019c617aa3cf561fde:
     expires_at: 2050-01-01
