--- a/approved_patterns.yml
+++ b/approved_patterns.yml
@@ -119,6 +119,8 @@
 - helm/chart-releaser-action@v1.4.0
 - helm/chart-testing-action@e6669bcd63d7cb57cb4380c33043eebe5d111992
 - helm/chart-testing-action@v2.6.1
+- helm/chart-testing-action@0d28d3144d3a25ea2cc349d6e59901c4ff469b3b
+- helm/chart-testing-action@v2.7.0
 - helm/kind-action@0025e74a8c7512023d06dc019c617aa3cf561fde
 - helm/kind-action@v1.10.0
 - houseabsolute/actions-rust-cross@*
