--- a/actions.yml
+++ b/actions.yml
@@ -494,6 +494,8 @@ ludeeus/action-shellcheck:
   94e0aab03ca135d11a35e5bfc14e6746dc56e7e9:
     expires_at: 2050-01-01
 manusa/actions-setup-minikube:
+  b589f2d61bf96695c546929c72b38563e856059d:
+    expires_at: 2050-01-01
   '*':
     expires_at: 2025-08-01
     keep: true
@@ -667,6 +669,8 @@ ruby/setup-ruby:
     expires_at: 2025-08-01
     keep: true
 sbt/setup-sbt:
+  26ab4b0fa1c47fa62fc1f6e51823a658fb6c760c:
+    expires_at: 2050-01-01
   '*':
     expires_at: 2025-08-01
     keep: true
@@ -675,6 +679,8 @@ scacap/action-surefire-report:
     expires_at: 2025-08-01
     keep: true
 scala-steward-org/scala-steward-action:
+  5021652c555c5724af574758b78ea5be49640007:
+    expires_at: 2050-01-01
   '*':
     expires_at: 2025-08-01
     keep: true
